--- a/css/home.css
+++ b/css/home.css
@@ -29,37 +29,20 @@ body {
   padding: 20px;
 }
 
-.heads {
-width: auto;
-  height: 80vh;
-  padding: 20px 100px;
+.heads{
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-
-  /* Glass effect */
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 20px;
-  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
-  backdrop-filter: blur(12px);
-  -webkit-backdrop-filter: blur(12px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-
-  text-align: center;
-  color: white;
-  padding: 2rem;
-  
 }
 .heads h1 {
-  font-size: 6.5rem;
+  font-size: 3.5rem;
   margin-bottom: 10px;
 
   color: var(--background-card);
   text-shadow:
     2px 2px 0 var(--color-accent),
-    6px 6px 0 var(--background-light),
-    10px 10px 0 var(--color-primary-light);
+    4px 4px 0 var(--background-light),
+    6px 6px 0 var(--color-primary-light);
 
 }
 
@@ -72,14 +55,17 @@ hr{
 }
 
 .heads h2{
-  font-size: 3.4rem;
+  font-size: 1.4rem;
   color: var(--color-text-muted);
   margin-bottom: 10px;
   text-decoration: underline;
   opacity: 0.75;
 }
+.sidebar h2{
+  color: var(--color-primary);
+}
 h2{
-  color: var(--color-text-muted);
+    color: var(--color-text-muted);
 }
 /* Navbar */
 nav {
