--- a/css/profile.css
+++ b/css/profile.css
@@ -20,7 +20,7 @@
       font-family: sans-serif;
       margin: 0;
       background: var(--background-light);
-  
+  width: fit-content;
     }
 
     /* Main content */
@@ -31,7 +31,7 @@
     }
 
     .profile-box {
-      max-width: auto;
+      max-width: 1200px;
       margin: auto;
       background: var(--background-card);
       padding: 2rem;
